--- a/src/index.css
+++ b/src/index.css
@@ -1,13 +1,38 @@
 body {
-  margin: 0;
-  font-family: -apple-system, BlinkMacSystemFont, 'Segoe UI', 'Roboto', 'Oxygen',
-    'Ubuntu', 'Cantarell', 'Fira Sans', 'Droid Sans', 'Helvetica Neue',
-    sans-serif;
-  -webkit-font-smoothing: antialiased;
-  -moz-osx-font-smoothing: grayscale;
+  color: #222;
+  background: #f4f4f4;
+  font: 400 14px CoreSans, Arial, sans-serif;
 }
 
-code {
-  font-family: source-code-pro, Menlo, Monaco, Consolas, 'Courier New',
-    monospace;
+a {
+  color: #222;
+}
+
+a:hover {
+  text-decoration: underline;
+}
+
+input {
+  width: 200px;
+  height: 10px;
+  padding: 10px;
+  outline: none;
+  border-radius: 20px;
+  margin-right: 10px;
+  border: 1px solid #dddddd;
+  transition:border-color .15s ease-in-out,box-shadow .15s ease-in-out;
+}
+
+button {
+  padding: 10px;
+  line-height: 10px;
+  outline: none;
+  border: 1px solid #dddddd;
+  background: transparent;
+  color: #808080;
+  cursor: pointer;
+}
+
+button:hover {
+  color: #222;
 }
